tests/ui/fail/log_unknown_arg.stderr
error: unexpected field `not_an_arg`
 --> fail/log_unknown_arg.rs:8:17
  |
8 |     emit::info!(not_an_arg: false, "Logging with a deeply nested {value: v}");
  |                 ^^^^^^^^^^^^^^^^^
